--- a/package.json
+++ b/package.json
@@ -54,14 +54,17 @@
     "sinon-chai": "^3.7.0"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "arg": "^5.0.0",
     "chalk": "^4.1.1",
     "clear": "^0.1.0",
     "clui": "^0.3.6",
     "configstore": "^6.0.0",
     "debug": "^4.3.1",
+    "download-git-repo": "^3.0.2",
     "esm": "^3.2.25",
     "figlet": "^1.5.0",
+    "fs-extra": "^10.0.0",
     "inquirer": "^8.1.0",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
